# ROSminiproject

./: README.md  TEST123
devel/: .catkin  .rosinstall  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/include/agitr/: Pause.h
devel/lib/agitr/: border  hello  new_direction  pubvel  reverse  rotate  subpose
devel/lib/pkgconfig/: agitr.pc
devel/lib/python2.7/dist-packages/agitr/msg/: _Pause.py  __init__.py
devel/share/agitr/cmake/: agitr-msg-extras.cmake  agitr-msg-paths.cmake  agitrConfig.cmake
devel/share/common-lisp/ros/agitr/msg/: Pause.lisp  _package.lisp  _package_Pause.lisp  agitr-msg.asd
src/agitr/: CMakeLists.txt  CMakeLists.txt~  border.cpp  border.cpp~  example.launch  new_direction.cpp  new_direction.cpp~  package.xml~  pubvel.cpp  pubvel.cpp~  reverse.cpp  reverse_launch.launch  rotate (copy).cpp  rotate.cpp  rotate_backup.cpp  subpose.cpp  subpose.cpp~
src/agitr/msg/: Pause.msg~
